# rust-postgis

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: bus_route.rs
src/: diesel_shim.rs  ewkb.rs  lib.rs  postgis.rs
src/diesel_shim/: mod.rs
src/diesel_shim/geography/: functions.rs  mod.rs
src/diesel_shim/geometry/: functions.rs  mod.rs  tests.rs
